--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_strategy1">Strategy1</string>
     <string name="title_activity_strategy4">Strategy4</string>
+    <string name="title_activity_kmlbuilder">KMLBuilderActivity</string>
 </resources>
